# EECE-446-SP-2024

./: .gitignore  Cargo.toml  README.md
lab_03/: Makefile  calc_client.c  calc_server.c  client.c  http_start.c  server.c
lab_04/: Makefile  dl_request.c  read_and_write.c  run_request
lab_10/: Makefile  echo.c  lab10c.c  server.c
program_01/: Makefile  h1-counter.c
program_02/: Cargo.toml  Makefile  peer.c
program_02/src/: main.rs
program_03/: Cargo.toml  Makefile  peer  peer.c
program_03/My_Peer/: peer.c
program_03/src/: data.rs  error.rs  fetch.rs  join.rs  listener.rs  main.rs  publish.rs  register.rs  search.rs  types.rs
program_04/: Makefile  registry.c  server.c
socket-client-rs/: Cargo.toml
socket-client-rs/src/: bytes.rs  main.rs
socket-server-rs/: Cargo.toml
socket-server-rs/src/: bytes.rs  main.rs
