[workspace]
members = [
    "socket-server-rs",
    "socket-client-rs",
    "program_02",
    "program_03"
]
resolver = "1"

[workspace.dependencies.anyhow]
version = "1"

[workspace.dependencies.clap]
version = "4"
features = ["derive"]

[workspace.dependencies.socket2]
version = "0.5"

[workspace.dependencies.dns-lookup]
version = "2.0.4"

[workspace.dependencies.ascii]
version = "1"
