[package]
name = "socket-client-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }

socket2 = { workspace = true }

rand = { version = "0.8" }
dns-lookup = { version = "2" }

